--- a/analyzer/Makefile
+++ b/analyzer/Makefile
@@ -1,8 +1,12 @@
 all:
 	javac -cp commons-math3-3.6.1.jar:. DoublePair.java
-	javac -cp commons-math3-3.6.1.jar:. Analyzer.java
-	javac -cp commons-math3-3.6.1.jar:. CurveFit.java
 	javac -cp commons-math3-3.6.1.jar:. DoubleListPair.java
+	javac -cp commons-math3-3.6.1.jar:. CurveFit.java
+	javac -cp commons-math3-3.6.1.jar:. ImpactValue.java
+	javac -cp commons-math3-3.6.1.jar:. PropRelation.java
+	javac -cp commons-math3-3.6.1.jar:. JaccardAnalysis.java
+	javac -cp commons-math3-3.6.1.jar:. Test.java
+	javac -cp commons-math3-3.6.1.jar:. Analyzer.java
 
 clean:
 	rm *.class
