--- a/analyzer/Makefile
+++ b/analyzer/Makefile
@@ -3,6 +3,7 @@ all:
 	javac -cp commons-math3-3.6.1.jar:. CurveFit.java
 	javac -cp commons-math3-3.6.1.jar:. ImpactValue.java
 	javac -cp commons-math3-3.6.1.jar:. PropRelation.java
+	javac -cp commons-math3-3.6.1.jar:. RangeAnalysis.java
 	javac -cp commons-math3-3.6.1.jar:. JaccardAnalysis.java
 	javac -cp commons-math3-3.6.1.jar:. Analyzer.java
 	javac -cp commons-math3-3.6.1.jar:. LatencyTool.java
