--- a/analyzer/Makefile
+++ b/analyzer/Makefile
@@ -1,6 +1,7 @@
 all:
-	javac -cp commons-math3-3.6.1.jar:. DoubleListPair.java
-	javac -cp commons-math3-3.6.1.jar:. DoubleList.java
+	javac -cp commons-math3-3.6.1.jar:. FloatListPair.java
+	javac -cp commons-math3-3.6.1.jar:. FloatList.java
+	javac SimpleRegression.java
 	javac -cp commons-math3-3.6.1.jar:. CurveFit.java
 	javac -cp commons-math3-3.6.1.jar:. ImpactValue.java
 	javac -cp commons-math3-3.6.1.jar:. PropRelation.java
