Update latency tool

--- a/analyzer/Makefile
+++ b/analyzer/Makefile
@@ -8,6 +8,7 @@ all:
 	javac -cp commons-math3-3.6.1.jar:. RangeAnalysis.java
 	javac -cp commons-math3-3.6.1.jar:. JaccardAnalysis.java
 	javac -cp commons-math3-3.6.1.jar:. Analyzer.java
+	javac -cp commons-math3-3.6.1.jar:. AnalyzerCorrelation.java
 	javac -cp commons-math3-3.6.1.jar:. LatencyTool.java
 
 clean:
